# advent_of_code_2024

./: 00_marimo_template.py  01.py  01_part_1.py  01_part_2.py  02.py  README.md  hello.py  pyproject.toml
01/: description_1.txt  description_2.txt
02/: description_1.txt
