[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.9.27",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "orjson>=3.10.12",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.16.0",
    "pyparsing>=3.2.0",
    "rich>=13.9.4",
    "textual-dev>=1.7.0",
]
